# fake-news-detection

./: README.md  main.py  pyproject.toml  test.ipynb
code/: create_raw_data.py  data.py  data_cleaning.py  data_download.py  utils.py
