[tool.poetry]
name = "fake-news-detection"
version = "0.1.0"
description = ""
authors = ["attilaszuts <45080765+attilaszuts@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fake_news_detection"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

