[tool.poetry]
name = "fake-news-detection"
version = "0.1.0"
description = ""
authors = ["attilaszuts <45080765+attilaszuts@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fake_news_detection"}]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.13"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

